--- a/server/package.json
+++ b/server/package.json
@@ -2,42 +2,38 @@
   "name": "methylscape-analysis-server",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "module",
   "author": "",
   "license": "ISC",
   "description": "",
   "scripts": {
-    "start": "node server.js",
-    "start:dev": "nodemon server.js"
+    "start": "pm2-runtime start pm2.config.json --only prod",
+    "start:dev": "pm2-runtime start pm2.config.json --only dev",
+    "start:debug": "node -r dotenv/config server.js"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.145.0",
-    "@aws-sdk/client-s3": "^3.145.0",
-    "@aws-sdk/client-sqs": "^3.145.0",
-    "@aws-sdk/lib-dynamodb": "^3.145.0",
-    "axios": "^0.27.2",
-    "compression": "^1.7.4",
-    "csv-parse": "^5.3.0",
-    "express": "^4.18.1",
+    "@aws-sdk/client-lambda": "^3.223.0",
+    "@aws-sdk/client-s3": "^3.223.0",
+    "@aws-sdk/client-sqs": "^3.223.0",
+    "axios": "^1.2.0",
+    "connect-session-knex": "^3.0.0",
+    "csv-parse": "^5.3.3",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "express-promise-router": "^4.1.1",
     "express-session": "^1.17.3",
-    "helmet": "^5.1.1",
-    "jest": "^29.0.1",
-    "knex": "^2.2.0",
+    "knex": "^2.3.0",
     "lodash": "^4.17.21",
     "memorystore": "^1.6.7",
-    "minimist": "^1.2.6",
-    "nodemailer": "^6.7.8",
-    "openid-client": "^5.1.8",
-    "papaparse": "^5.3.2",
+    "nodemailer": "^6.8.0",
+    "openid-client": "^5.3.1",
     "passport": "^0.6.0",
-    "pg": "^8.7.3",
+    "pg": "^8.8.0",
     "r-wrapper": "^1.1.2",
-    "uuid": "^8.3.2",
-    "winston": "^3.8.1",
-    "winston-daily-rotate-file": "^4.7.1"
+    "winston": "^3.8.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19",
-    "jest": "^27.0.6"
+    "jest": "^29.3.1",
+    "pm2": "^5.2.2"
   }
 }
