update apache configuration

--- a/docker/frontend.conf
+++ b/docker/frontend.conf
@@ -14,29 +14,34 @@ ProxyPassReverse "${APP_PATH}/api" "${API_BASE_URL}/api"
   </Directory>
 </IfModule>
 
+# Compress responses
+<IfModule deflate_module>
+  <IfModule filter_module>
+    SetOutputFilter DEFLATE
+  </IfModule>
+</IfModule>
 
-# Add X-Forwarded-For header to combined log format
-LogFormat "%h %{X-Forwarded-For}i %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
+# Define remote ip header when behind a proxy
+<IfModule remoteip_module>
+  RemoteIPHeader X-Forwarded-For
+</IfModule>
 
-# Hide httpd version and signature
-ServerTokens Prod
-ServerSignature Off
+<IfModule headers_module>
+  # Only allow content from the specified sources
+  # Header set Content-Security-Policy "default-src 'self';"
 
-# Only allow content from the specified sources
-# Header set Content-Security-Policy "default-src 'self';"
+  # Set Referer header only when navigating within the same origin
+  Header set Referrer-Policy "same-origin"
 
-# Set Referer header only when navigating within the same origin
-Header set Referrer-Policy "same-origin"
+  # Enforce https
+  # Header set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
 
-# Enforce https
-# Header set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+  # Disable MIME type sniffing
+  Header set X-Content-Type-Options "nosniff"
 
-# Disable MIME type sniffing
-Header set X-Content-Type-Options "nosniff"
+  # Only allow iframes from the same origin
+  Header set X-Frame-Options "SAMEORIGIN"
 
-# Only allow iframes from the same origin
-Header set X-Frame-Options "SAMEORIGIN"
-
-# Enable xss protection
-header set X-XSS-Protection "1; mode=block"
-
+  # Enable xss protection
+  header set X-XSS-Protection "1; mode=block"
+</IfModule>
