--- a/docker/frontend.conf
+++ b/docker/frontend.conf
@@ -34,7 +34,9 @@ ProxyPassReverse "${APP_PATH}/api" "${API_BASE_URL}/api"
   Header set Referrer-Policy "same-origin"
 
   # Enforce https
-  # Header set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+  <If "%{HTTP:X-Forwarded-Proto} == 'https'">
+    Header set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+  </If>
 
   # Disable MIME type sniffing
   Header set X-Content-Type-Options "nosniff"
