--- a/database/package.json
+++ b/database/package.json
@@ -4,22 +4,21 @@
     "test": "node -r dotenv/config --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.145.0",
-    "@aws-sdk/client-sqs": "^3.145.0",
-    "@aws-sdk/client-ssm": "^3.223.0",
-    "csv-parse": "^5.3.0",
+    "@aws-sdk/client-s3": "^3.337.0",
+    "@aws-sdk/client-sqs": "^3.337.0",
+    "@aws-sdk/client-ssm": "^3.337.0",
+    "csv-parse": "^5.3.10",
     "dotenv": "^16.0.3",
-    "knex": "^2.2.0",
+    "knex": "^2.4.2",
     "lodash": "^4.17.21",
-    "minimist": "^1.2.6",
-    "nodemailer": "^6.7.8",
-    "pg": "^8.7.3",
-    "pg-copy-streams": "^6.0.2",
+    "minimist": "^1.2.8",
+    "nodemailer": "^6.9.2",
+    "pg": "^8.11.0",
+    "pg-copy-streams": "^6.0.5",
     "pg-format": "^1.0.4",
-    "winston": "^3.8.1",
-    "xlsx": "^0.18.5"
+    "winston": "^3.8.2"
   },
   "devDependencies": {
-    "jest": "^29.0"
+    "jest": "^29.5"
   }
 }
