--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.3.2",
     "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
+    "papaparse": "^5.4.1",
     "plotly.js": "^2.24.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
