--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.17.3",
     "knex": "^2.5.0",
     "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
     "openid-client": "^5.4.3",
     "passport": "^0.6.0",
