update example env

--- a/server/.env.example
+++ b/server/.env.example
@@ -16,6 +16,8 @@ AWS_SECRET_ACCESS_KEY=
 
 S3_DATA_BUCKET=methylscape
 S3_DATA_BUCKET_KEY_PREFIX=data/
+S3_USER_DATA_BUCKET=methylscape
+S3_USER_DATA_BUCKET_KEY_PREFIX=user-data/
 ECS_DATA_IMPORT_TASK=methylscape-data-import
 
 EMAIL_SENDER=admin@example.com
