--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "express-promise-router": "^4.1.1",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "knex": "^2.5.0",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
