--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "classnames": "^2.3.2",
+    "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
