--- a/classifier/package.json
+++ b/classifier/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.427.0",
     "dotenv": "^16.3.1",
+    "fast-csv": "^4.3.6",
     "knex": "^3.0.1",
     "lodash": "^4.17.21",
     "pg": "^8.11.3",
